fix(Locale): replace deprecated Locale constructor